==> leabut/frdm-kl25z/RCSwitch.cpp <==
#include "RCSwitch.h"
#include <cmath>
#include <cstring>
#include "us_ticker_api.h"
    #define PROGMEM
    #define memcpy_P(dest, src, num) memcpy((dest), (src), (num))
    #define RECEIVE_ATTR ICACHE_RAM_ATTR
    #define VAR_ISR_ATTR
    #define RECEIVE_ATTR IRAM_ATTR
    #define VAR_ISR_ATTR DRAM_ATTR
    #define RECEIVE_ATTR
    #define VAR_ISR_ATTR

void RCSwitch::enableTransmit(DigitalOut* nTransmitterPin) {
  // edit leabut
  this->nTransmitterPin = nTransmitterPin;
}

void RCSwitch::transmit(HighLow pulses) {
  uint8_t firstLogicLevel = (this->protocol.invertedSignal) ? LOW : HIGH;
  uint8_t secondLogicLevel = (this->protocol.invertedSignal) ? HIGH : LOW;
  
  this->nTransmitterPin->write(firstLogicLevel);
  ThisThread::sleep_for( this->protocol.pulseLength * pulses.high );
  this->nTransmitterPin->write(secondLogicLevel);
  ThisThread::sleep_for( this->protocol.pulseLength * pulses.low);
}

void RCSwitch::enableReceive(InterruptIn* interrupt) {
  this->nReceiverInterrupt = interrupt;
  this->enableReceive();
}

void RCSwitch::enableReceive() {
  if (this->nReceiverInterrupt != nullptr) {
    RCSwitch::nReceivedValue = 0;
    RCSwitch::nReceivedBitlength = 0;
    // edit leabut
    this->nReceiverInterrupt->rise(&handleInterrupt);
    this->nReceiverInterrupt->fall(&handleInterrupt);
    this->nReceiverInterrupt->enable_irq();
  }
}
